--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,14 +12,13 @@ website:
       - href: people.qmd
 
   page-footer:
-    right: "Built with love in [Quarto](https://quarto.org/)"
-    left: "&copy; Copyright 2023, The Quantitative Histories Workshop"
+    right: "Built with [Quarto](https://quarto.org/)"
+    left: "&copy; Copyright 2024, The Quantitative Histories Workshop"
    
 format:
   html:
     page-layout: full
     theme: yeti
-    css: styles.css
     toc: true
     grid:
       sidebar-width: 0px
