--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,7 +10,7 @@ website:
         text: Home
       - href: programs.qmd
       - href: people.qmd
-      - href: partners.qmd
+      - href: research.qmd
       - href: manual.qmd
 
   page-footer:
